# mlops-regression

./: .flake8  .gitignore  .train.py.swp  LICENSE  README.md  X_test.h5  X_test.h5.dvc  infer.py  mlflow_config.toml  model.h5  model.h5.dvc  predict.py  predict_diamonds.csv  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
conf/: config.yaml
data/: .gitignore  X_test.h5.dvc  model.h5.dvc  predict_diamonds.csv.dvc
mlops-regression/: train.py
mlruns/0/: meta.yaml
mlruns/0/f0b2f479dafe4ebbb5ac18dd3b8b57bc/: meta.yaml
mlruns/0/f0b2f479dafe4ebbb5ac18dd3b8b57bc/metrics/: MAPE_train  MSELoss_train  R2Score_train
mlruns/0/f0b2f479dafe4ebbb5ac18dd3b8b57bc/params/: git_commit_id
mlruns/0/f0b2f479dafe4ebbb5ac18dd3b8b57bc/tags/: mlflow.runName
models/: model.h5.dvc  model.py
outputs/2023-12-12/09-17-31/.hydra/: config.yaml  hydra.yaml
outputs/2023-12-12/09-18-15/.hydra/: hydra.yaml
outputs/2023-12-13/21-22-26/.hydra/: hydra.yaml
outputs/2023-12-13/21-43-49/.hydra/: hydra.yaml
outputs/2023-12-13/21-45-38/.hydra/: hydra.yaml
outputs/2023-12-13/21-45-46/.hydra/: hydra.yaml
outputs/2023-12-13/21-46-23/.hydra/: hydra.yaml
outputs/2023-12-13/21-46-42/.hydra/: hydra.yaml
outputs/2023-12-13/21-47-01/.hydra/: hydra.yaml
outputs/2023-12-13/21-51-43/.hydra/: hydra.yaml
outputs/2023-12-13/21-52-27/.hydra/: hydra.yaml
outputs/2023-12-13/21-54-09/.hydra/: hydra.yaml
outputs/2023-12-13/21-54-49/.hydra/: hydra.yaml
outputs/2023-12-13/21-58-24/.hydra/: hydra.yaml
outputs/2023-12-13/22-21-05/.hydra/: hydra.yaml
(+24 files in other folders)
