[tool.poetry]
name = "mlops"
version = "1.3.0"
description = "mlops"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0.1"
toml = "^0.10.2"
numpy = "1.22.3"
matplotlib = "^3.5.1"
torch = "2.1.0"
pandas = "1.2.2"
fire = "^0.5.0"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"